--- a/digital_twins.html
+++ b/digital_twins.html
@@ -1,27 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Discourage search engines from indexing (if desired) -->
-  <meta name="robots" content="noindex"> 
-
+  <meta name="robots" content="noindex">
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Industry Digital Twins - Unity Technologies</title>
-  <link rel="stylesheet" href="style.css" />
-  
-  <!-- Simple script to swap main image based on thumbnail click -->
-  <script>
-    function updateMainImage(newSrc) {
-      const mainImg = document.getElementById('dt-main-image');
-      mainImg.src = newSrc;
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Digital Twins — Portfolio Project | NerdCore Enterprises</title>
+
+  <!-- Page-scoped styles (no global font rules). Your site CSS loads AFTER this to win. -->
+  <style>
+    :root { --header-offset: 0px; }
+
+    /* --- Layout container --- */
+    .project-layout{
+      --gap:1rem; --gap-lg:2rem;
+      max-width:1200px; margin:0 auto;
+      padding:calc(1rem + var(--header-offset)) 1rem 1rem;
+      display:grid; gap:var(--gap-lg);
     }
-  </script>
+
+    /* Desktop: full-width hero row, then two columns underneath */
+    @media (min-width:960px){
+      .project-layout{
+        grid-template-columns:minmax(260px,340px) 1fr;
+        grid-template-areas:
+          "intro intro"
+          "sidebar content";
+        align-items:start;
+      }
+      .page-intro{grid-area:intro;}
+      .sidebar{grid-area:sidebar; position:sticky; top:calc(16px + var(--header-offset));}
+      .content{grid-area:content;}
+    }
+
+    /* Mobile: natural single-column flow */
+    @media (max-width:959.98px){
+      .page-intro{order:0;}
+      .sidebar{order:1;}
+      .content{order:2;}
+    }
+
+    /* --- Page intro / hero / links --- */
+    .page-intro{display:grid; gap:1rem;}
+    .page-intro h1{margin:0;} /* avoid clipping under fixed header */
+    .hero-media{border-radius:12px; overflow:hidden;}
+    .hero-media img{width:100%; display:block;}
+
+    .actions{display:flex; flex-wrap:wrap; gap:.75rem;}
+    .btn{
+      display:inline-flex; align-items:center; gap:.5rem;
+      padding:.65rem .9rem; border-radius:10px;
+      border:1px solid rgba(255,255,255,.14); text-decoration:none;
+    }
+
+    /* --- Left column facts --- */
+    .facts-stack{display:flex; flex-direction:column; gap:var(--gap);}
+    .card{
+      border:1px solid rgba(255,255,255,.12);
+      border-radius:12px; padding:1rem;
+      background:rgba(255,255,255,.03);
+    }
+    .card h3{margin:0 0 .5rem 0; font-size:1.05rem;}
+
+    /* Bullet spacing fix */
+    .sidebar .facts-stack .card ul{
+      list-style:disc;
+      list-style-position:inside;
+      padding-left:0;
+      margin:0;
+      text-align:left !important;
+    }
+    .sidebar .facts-stack .card li{margin:.25rem 0;}
+
+    .badges{display:flex; flex-wrap:wrap; gap:.5rem;}
+    .badge{
+      padding:.35rem .6rem; border-radius:999px;
+      border:1px solid rgba(255,255,255,.18);
+      font-size:.85rem;
+      background:rgba(255,255,255,.05);
+    }
+
+    /* --- Right column sections --- */
+    .section{margin-block:var(--gap-lg);}
+    .section h2{margin:0 0 .25rem 0;}
+
+    /* --- Gallery --- */
+    .gallery{
+      display:grid; gap:.75rem;
+      grid-template-columns:repeat(auto-fit, minmax(120px,1fr));
+    }
+    .thumb{
+      display:inline-block; border:1px solid rgba(255,255,255,.12);
+      border-radius:10px; background:none; padding:0; cursor:pointer;
+    }
+    .thumb img{
+      display:block; width:100%; height:100%;
+      object-fit:cover; border-radius:10px;
+    }
+    .thumb[aria-pressed="true"]{outline:2px solid #7aa2ff; outline-offset:2px;}
+
+    :target{scroll-margin-top:calc(90px + var(--header-offset));}
+  </style>
+
+  <!-- Your site styles (fonts/colors/typography). Loaded last to override if needed. -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- Normal Header -->
+  <!-- Header -->
   <header class="header">
-    <nav class="top-nav">
+    <nav class="top-nav" aria-label="Primary">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
@@ -30,51 +117,119 @@
     </nav>
   </header>
 
-  <!-- Main Content -->
-  <main class="portfolio">
-    <h1>Digital Twins</h1>
+  <!-- Main -->
+  <main class="portfolio project-layout">
 
-    <!-- Large Main Image -->
-    <div class="main-image-container">
-      <img
-        id="dt-main-image"
-        class="main-image"
-        src="images/dt/windfarm.avif"
-        alt="DigitalTwins Main Image"
-      />
-    </div>
-
-    <!-- Image Gallery (Thumbnails) -->
-    <div class="gallery-container">
-      <img
-        class="gallery-thumb"
-        src="images/dt/windfarm.avif"
-        alt="Digital Twins Banner"
-        onclick="updateMainImage('images/dt/windfarm.avif')"
-      />
-      <img
-        class="gallery-thumb"
-        src="images/dt/yvr.avif"
-        alt="Digital Twins Thumbnail 1"
-        onclick="updateMainImage('images/dt/yvr.avif')"
-      />
-      <img
-        class="gallery-thumb"
-        src="images/dt/YVR_2.avif"
-        alt="Digital Twins Thumbnail 2"
-        onclick="updateMainImage('images/dt/YVR_2.avif')"
-      />
-    </div>
-
-    <!-- Description -->
-    <section class="description-section">
-      <h2>Description</h2>
-      <p>
-        Delivered immersive applications across AR, VR, web, mobile, and desktop platforms. Reached vast audiences with seamless multi-platform support, leveraged cutting-edge devices, and helped create interactive experiences that engage customers and stakeholders wherever they are.
+    <!-- ROW 1: full-width hero -->
+    <header class="page-intro">
+      <h1>Digital Twins</h1>
+      <p class="lead">
+        Real-time, interactive digital twins built in Unity—delivered across XR, web, mobile, and desktop to engage customers and stakeholders wherever they are.
       </p>
-      <p>
-        <a href="https://unity.com/products/unity-industry?utm_source=google&utm_medium=cpc&utm_campaign=nxt_dd_ind_amer_amer-t1_en_aw_sem-gg_acq_br-pr_2023-04_industry-brand_cc3022_ev-br_id:71700000121354049&utm_content=nxt_dd_ind_amer_aw_sem_gg_ev-br_pros_x_ggl_cpc_x_sd_all_x_x_usecase_id:58700008854536311&utm_term=unity%20industry&&&&&gad_source=1&gclid=CjwKCAjw47i_BhBTEiwAaJfPpv_B0Oph1Cbe-ulMWMA84Mg5R2zE1CdGnPrPQi2lkjMoLiDvJYXgtRoCdf0QAvD_BwE&gclsrc=aw.ds">Unity: Digital Twins</a><br>
-      </p>
+
+      <div class="hero-media">
+        <img id="dt-hero-image" src="images/dt/windfarm.avif"
+             alt="Unity digital twin visualization of a wind farm" />
+      </div>
+
+      <nav class="actions" aria-label="Project links">
+        <a class="btn" href="https://unity.com/products/unity-industry?utm_source=google&utm_medium=cpc&utm_campaign=nxt_dd_ind_amer_amer-t1_en_aw_sem-gg_acq_br-pr_2023-04_industry-brand_cc3022_ev-br_id:71700000121354049&utm_content=nxt_dd_ind_amer_aw_sem_gg_ev-br_pros_x_ggl_cpc_x_sd_all_x_x_usecase_id:58700008854536311&utm_term=unity%20industry&&&&&gad_source=1&gclid=CjwKCAjw47i_BhBTEiwAaJfPpv_B0Oph1Cbe-ulMWMA84Mg5R2zE1CdGnPrPQi2lkjMoLiDvJYXgtRoCdf0QAvD_BwE&gclsrc=aw.ds" target="_blank" rel="noopener">
+          Unity: Digital Twins
+        </a>
+      </nav>
+    </header>
+
+    <!-- ROW 2: two-column grid: LEFT = stacked boxes -->
+    <aside class="sidebar" aria-label="Project facts">
+      <div class="facts-stack">
+        <article class="card">
+          <h3>My Roles</h3>
+          <ul>
+            <li>Unity Developer</li>
+            <li>Platform Specialist</li>
+            <li>Solutions Developer</li>
+          </ul>
+        </article>
+
+        <article class="card">
+          <h3>Skills &amp; Tools</h3>
+          <div class="badges">
+            <span class="badge">Unity</span>
+            <span class="badge">C#</span>
+            <span class="badge">URP / HDRP</span>
+            <span class="badge">Addressables</span>
+            <span class="badge">Shader Graph</span>
+            <span class="badge">WebGL</span>
+            <span class="badge">AR Foundation</span>
+            <span class="badge">Git</span>
+          </div>
+        </article>
+
+        <article class="card">
+          <h3>Contributions &amp; Highlights</h3>
+          <ul>
+            <li>Built interactive scenes that scale from mobile to XR.</li>
+            <li>Set up Addressables profiles for multi-platform delivery.</li>
+            <li>Authored tools/workflows to prep large CAD/BIM assets.</li>
+          </ul>
+        </article>
+
+        <article class="card">
+          <h3>Project Details</h3>
+          <ul>
+            <li><strong>Engine:</strong> Unity</li>
+            <li><strong>Targets:</strong> WebGL, Mobile, Desktop, XR</li>
+            <li><strong>Pipelines:</strong> URP/HDRP (per use case)</li>
+            <li><strong>Use Case:</strong> Industrial visualization</li>
+          </ul>
+        </article>
+      </div>
+    </aside>
+
+    <!-- ROW 2: two-column grid: RIGHT = overview/gallery/contributions -->
+    <section class="content">
+      <section class="section" id="overview">
+        <h2>Overview</h2>
+        <p>
+          Delivered immersive applications across AR, VR, web, mobile, and desktop. Focused on
+          clean data prep, performant rendering, and simple interaction models that make complex
+          systems easy to understand.
+        </p>
+      </section>
+
+      <section class="section" id="gallery" aria-labelledby="gallery-heading">
+        <h2 id="gallery-heading">Gallery</h2>
+        <div class="gallery" role="list">
+          <button class="thumb" type="button" role="listitem" aria-pressed="true"
+                  data-fullsrc="images/dt/windfarm.avif" aria-label="Show wind farm visualization">
+            <img src="images/dt/windfarm.avif" alt="Wind farm visualization thumbnail">
+          </button>
+          <button class="thumb" type="button" role="listitem" aria-pressed="false"
+                  data-fullsrc="images/dt/yvr.avif" aria-label="Show airport visualization">
+            <img src="images/dt/yvr.avif" alt="Airport visualization thumbnail">
+          </button>
+          <button class="thumb" type="button" role="listitem" aria-pressed="false"
+                  data-fullsrc="images/dt/YVR_2.avif" aria-label="Show airport visualization 2">
+            <img src="images/dt/YVR_2.avif" alt="Airport visualization 2 thumbnail">
+          </button>
+        </div>
+        <noscript>
+          <p>JavaScript is disabled — open full images:
+            <a href="images/dt/windfarm.avif">Wind Farm</a>,
+            <a href="images/dt/yvr.avif">Airport 1</a>,
+            <a href="images/dt/YVR_2.avif">Airport 2</a>.
+          </p>
+        </noscript>
+      </section>
+
+      <section class="section" id="details">
+        <h2>Technical Contributions</h2>
+        <ul>
+          <li>Optimized large scenes for mobile/XR where appropriate.</li>
+          <li>Optimized assets and performance for device specifics, i.e. memory performance for the HoloLens</li>
+          <li>Editor tooling for scene config, simple cameras/navigation, and quick environment swaps.</li>
+        </ul>
+      </section>
     </section>
   </main>
 
@@ -83,5 +238,49 @@
     <p>&copy; 2025 NerdCore Enterprises. All rights reserved.</p>
   </footer>
 
+  <!-- JS: gallery swap + header offset -->
+  <script>
+    (function(){
+      // Swap hero image from gallery
+      const hero=document.getElementById('dt-hero-image');
+      const gallery=document.querySelector('.gallery');
+      if(hero&&gallery){
+        gallery.addEventListener('click',e=>{
+          const btn=e.target.closest('[data-fullsrc]');
+          if(!btn) return;
+          const src=btn.getAttribute('data-fullsrc');
+          if(src){
+            hero.src=src;
+            gallery.querySelectorAll('.thumb[aria-pressed]').forEach(t=>t.setAttribute('aria-pressed','false'));
+            btn.setAttribute('aria-pressed','true');
+          }
+        });
+        // Optional keyboard nav
+        gallery.addEventListener('keydown',e=>{
+          if(!['ArrowLeft','ArrowRight'].includes(e.key)) return;
+          const items=[...gallery.querySelectorAll('.thumb')];
+          const cur=items.findIndex(b=>b.getAttribute('aria-pressed')==='true');
+          let nx=cur;
+          if(e.key==='ArrowLeft') nx=(cur-1+items.length)%items.length;
+          if(e.key==='ArrowRight') nx=(cur+1)%items.length;
+          items[nx].focus(); items[nx].click();
+        });
+      }
+
+      // Reserve space if header is fixed so H1 isn't clipped
+      const header=document.querySelector('.header');
+      const root=document.documentElement;
+      if(header&&root){
+        const isFixed=()=>getComputedStyle(header).position==='fixed';
+        const apply=()=>{
+          const offset=isFixed()?header.offsetHeight:0;
+          root.style.setProperty('--header-offset',offset+'px');
+        };
+        apply();
+        if(window.ResizeObserver){ new ResizeObserver(apply).observe(header); }
+        addEventListener('resize',apply);
+      }
+    })();
+  </script>
 </body>
 </html>
