--- a/reflect.html
+++ b/reflect.html
@@ -1,27 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Discourage search engines from indexing (if desired) -->
-  <meta name="robots" content="noindex"> 
-
+  <meta name="robots" content="noindex">
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Reflect - Unity Technologies</title>
-  <link rel="stylesheet" href="style.css" />
-  
-  <!-- Simple script to swap main image based on thumbnail click -->
-  <script>
-    function updateMainImage(newSrc) {
-      const mainImg = document.getElementById('reflect-main-image');
-      mainImg.src = newSrc;
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Reflect — Portfolio Project | NerdCore Enterprises</title>
+
+  <!-- Page-scoped styles (no global font rules). Your site CSS loads AFTER this to win. -->
+  <style>
+    :root { --header-offset: 0px; }
+
+    /* --- Layout container --- */
+    .project-layout{
+      --gap:1rem; --gap-lg:2rem;
+      max-width:1200px; margin:0 auto;
+      padding:calc(1rem + var(--header-offset)) 1rem 1rem;
+      display:grid; gap:var(--gap-lg);
     }
-  </script>
+
+    /* Desktop: full-width hero row, then two columns underneath */
+    @media (min-width:960px){
+      .project-layout{
+        grid-template-columns:minmax(260px,340px) 1fr;
+        grid-template-areas:
+          "intro intro"
+          "sidebar content";
+        align-items:start;
+      }
+      .page-intro{grid-area:intro;}
+      .sidebar{grid-area:sidebar; position:sticky; top:calc(16px + var(--header-offset));}
+      .content{grid-area:content;}
+    }
+
+    /* Mobile: natural single-column flow */
+    @media (max-width:959.98px){
+      .page-intro{order:0;}
+      .sidebar{order:1;}
+      .content{order:2;}
+    }
+
+    /* --- Page intro / hero / links --- */
+    .page-intro{display:grid; gap:1rem;}
+    .page-intro h1{margin:0;} /* avoid clipping under fixed header */
+    .hero-media{border-radius:12px; overflow:hidden;}
+    .hero-media img{width:100%; display:block;}
+
+    .actions{display:flex; flex-wrap:wrap; gap:.75rem;}
+    .btn{
+      display:inline-flex; align-items:center; gap:.5rem;
+      padding:.65rem .9rem; border-radius:10px;
+      border:1px solid rgba(255,255,255,.14); text-decoration:none;
+    }
+
+    /* --- Left column facts --- */
+    .facts-stack{display:flex; flex-direction:column; gap:var(--gap);}
+    .card{
+      border:1px solid rgba(255,255,255,.12);
+      border-radius:12px; padding:1rem;
+      background:rgba(255,255,255,.03);
+    }
+    .card h3{margin:0 0 .5rem 0; font-size:1.05rem;}
+
+    /* Bullet spacing fix */
+    .sidebar .facts-stack .card ul{
+      list-style:disc;
+      list-style-position:inside;
+      padding-left:0;
+      margin:0;
+      text-align:left !important;
+    }
+    .sidebar .facts-stack .card li{margin:.25rem 0;}
+
+    .badges{display:flex; flex-wrap:wrap; gap:.5rem;}
+    .badge{
+      padding:.35rem .6rem; border-radius:999px;
+      border:1px solid rgba(255,255,255,.18);
+      font-size:.85rem;
+      background:rgba(255,255,255,.05);
+    }
+
+    /* --- Right column sections --- */
+    .section{margin-block:var(--gap-lg);}
+    .section h2{margin:0 0 .25rem 0;}
+
+    /* --- Gallery --- */
+    .gallery{
+      display:grid; gap:.75rem;
+      grid-template-columns:repeat(auto-fit, minmax(120px,1fr));
+    }
+    .thumb{
+      display:inline-block; border:1px solid rgba(255,255,255,.12);
+      border-radius:10px; background:none; padding:0; cursor:pointer;
+    }
+    .thumb img{
+      display:block; width:100%; height:100%;
+      object-fit:cover; border-radius:10px;
+    }
+    .thumb[aria-pressed="true"]{outline:2px solid #7aa2ff; outline-offset:2px;}
+
+    :target{scroll-margin-top:calc(90px + var(--header-offset));}
+  </style>
+
+  <!-- Your site styles (fonts/colors/typography). Loaded last to override if needed. -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- Normal Header -->
+  <!-- Header -->
   <header class="header">
-    <nav class="top-nav">
+    <nav class="top-nav" aria-label="Primary">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
@@ -30,51 +117,118 @@
     </nav>
   </header>
 
-  <!-- Main Content -->
-  <main class="portfolio">
-    <h1>Reflect</h1>
+  <!-- Main -->
+  <main class="portfolio project-layout">
 
-    <!-- Large Main Image -->
-    <div class="main-image-container">
-      <img
-        id="reflect-main-image"
-        class="main-image"
-        src="images/reflect/logo.png"
-        alt="Reflect Main Image"
-      />
-    </div>
-
-    <!-- Image Gallery (Thumbnails) -->
-    <div class="gallery-container">
-      <img
-        class="gallery-thumb"
-        src="images/reflect/logo.png"
-        alt="Reflect Banner"
-        onclick="updateMainImage('images/reflect/logo.png')"
-      />
-      <img
-        class="gallery-thumb"
-        src="images/reflect/ipad.webp"
-        alt="reflect Thumbnail 1"
-        onclick="updateMainImage('images/reflect/ipad.webp')"
-      />
-      <img
-        class="gallery-thumb"
-        src="images/reflect/ARModes2022.webp"
-        alt="reflect Thumbnail 2"
-        onclick="updateMainImage('images/reflect/ARModes2022.webp')"
-      />
-    </div>
-
-    <!-- Description -->
-    <section class="description-section">
-      <h2>Description</h2>
-      <p>
-        Unity Reflect facilitated the integration of Building Information Modeling (BIM) data and other CAD data into Unity's real-time engine, enabling interactive 3D visualization and collaboration. It allowed multiple users to access and interact with the same 3D models, facilitating better communication and coordination among project stakeholders. Unity Reflect was available on various platforms, including PC, Mac, iOS, and Android, as well as VR headsets like HTC Vive and Oculus Rift. 
+    <!-- ROW 1: full-width hero -->
+    <header class="page-intro">
+      <h1>Reflect</h1>
+      <p class="lead">
+        Real-time BIM/CAD visualization and collaboration in Unity—multi-platform delivery across desktop, mobile, AR, and VR.
       </p>
-      <p>
-        <a href="https://unity.com/products/unity-reflect-develop">Unity: Reflect</a><br>
-      </p>
+
+      <div class="hero-media">
+        <img id="reflect-hero-image" src="images/reflect/logo.png"
+             alt="Unity Reflect logo / key art" />
+      </div>
+
+      <nav class="actions" aria-label="Project links">
+        <a class="btn" href="https://unity.com/products/unity-reflect-develop" target="_blank" rel="noopener">
+          Unity: Reflect
+        </a>
+      </nav>
+    </header>
+
+    <!-- ROW 2: two-column grid: LEFT = stacked boxes -->
+    <aside class="sidebar" aria-label="Project facts">
+      <div class="facts-stack">
+        <article class="card">
+          <h3>My Roles</h3>
+          <ul>
+            <li>Unity Developer</li>
+            <li>Platform Specialist</li>
+            <li>Solutions Engineer</li>
+          </ul>
+        </article>
+
+        <article class="card">
+          <h3>Skills &amp; Tools</h3>
+          <div class="badges">
+            <span class="badge">Unity</span>
+            <span class="badge">C#</span>
+            <span class="badge">URP / HDRP</span>
+            <span class="badge">Addressables</span>
+            <span class="badge">ARKit / ARCore</span>
+            <span class="badge">XR Interaction</span>
+            <span class="badge">BIM/IFC</span>
+            <span class="badge">Git</span>
+          </div>
+        </article>
+
+        <article class="card">
+          <h3>Contributions &amp; Highlights</h3>
+          <ul>
+            <li>Data pipelines to bring BIM/CAD into Unity scenes.</li>
+            <li>Multi-user review flows with scene annotations.</li>
+            <li>Profiles for desktop, mobile, AR, and VR delivery.</li>
+          </ul>
+        </article>
+
+        <article class="card">
+          <h3>Project Details</h3>
+          <ul>
+            <li><strong>Engine:</strong> Unity</li>
+            <li><strong>Targets:</strong> Windows/macOS, iOS/Android, VR/XR</li>
+            <li><strong>Use Case:</strong> AEC visualization & collaboration</li>
+          </ul>
+        </article>
+      </div>
+    </aside>
+
+    <!-- ROW 2: two-column grid: RIGHT = overview/gallery/contributions -->
+    <section class="content">
+      <section class="section" id="overview">
+        <h2>Overview</h2>
+        <p>
+          Unity Reflect facilitated the integration of BIM and CAD data into Unity’s real-time engine,
+          enabling interactive 3D visualization and collaboration. Teams could access shared models
+          across platforms to communicate design intent and coordinate decisions.
+        </p>
+      </section>
+
+      <section class="section" id="gallery" aria-labelledby="gallery-heading">
+        <h2 id="gallery-heading">Gallery</h2>
+        <div class="gallery" role="list">
+          <button class="thumb" type="button" role="listitem" aria-pressed="true"
+                  data-fullsrc="images/reflect/logo.png" aria-label="Show logo key art">
+            <img src="images/reflect/logo.png" alt="Logo thumbnail">
+          </button>
+          <button class="thumb" type="button" role="listitem" aria-pressed="false"
+                  data-fullsrc="images/reflect/ipad.webp" aria-label="Show iPad app view">
+            <img src="images/reflect/ipad.webp" alt="iPad app thumbnail">
+          </button>
+          <button class="thumb" type="button" role="listitem" aria-pressed="false"
+                  data-fullsrc="images/reflect/ARModes2022.webp" aria-label="Show AR modes">
+            <img src="images/reflect/ARModes2022.webp" alt="AR modes thumbnail">
+          </button>
+        </div>
+        <noscript>
+          <p>JavaScript is disabled — open full images:
+            <a href="images/reflect/logo.png">Logo</a>,
+            <a href="images/reflect/ipad.webp">iPad</a>,
+            <a href="images/reflect/ARModes2022.webp">AR Modes</a>.
+          </p>
+        </noscript>
+      </section>
+
+      <section class="section" id="details">
+        <h2>Technical Contributions</h2>
+        <ul>
+          <li>Import & mapping flows for BIM/CAD data into Unity scenes.</li>
+          <li>Platform profiles with Addressables for desktop/mobile/AR/VR.</li>
+          <li>Interaction patterns for selection, isolate, sectioning, and notes.</li>
+        </ul>
+      </section>
     </section>
   </main>
 
@@ -83,5 +237,49 @@
     <p>&copy; 2025 NerdCore Enterprises. All rights reserved.</p>
   </footer>
 
+  <!-- JS: gallery swap + header offset -->
+  <script>
+    (function(){
+      // Swap hero image from gallery
+      const hero=document.getElementById('reflect-hero-image');
+      const gallery=document.querySelector('.gallery');
+      if(hero&&gallery){
+        gallery.addEventListener('click',e=>{
+          const btn=e.target.closest('[data-fullsrc]');
+          if(!btn) return;
+          const src=btn.getAttribute('data-fullsrc');
+          if(src){
+            hero.src=src;
+            gallery.querySelectorAll('.thumb[aria-pressed]').forEach(t=>t.setAttribute('aria-pressed','false'));
+            btn.setAttribute('aria-pressed','true');
+          }
+        });
+        // Optional keyboard nav
+        gallery.addEventListener('keydown',e=>{
+          if(!['ArrowLeft','ArrowRight'].includes(e.key)) return;
+          const items=[...gallery.querySelectorAll('.thumb')];
+          const cur=items.findIndex(b=>b.getAttribute('aria-pressed')==='true');
+          let nx=cur;
+          if(e.key==='ArrowLeft') nx=(cur-1+items.length)%items.length;
+          if(e.key==='ArrowRight') nx=(cur+1)%items.length;
+          items[nx].focus(); items[nx].click();
+        });
+      }
+
+      // Reserve space if header is fixed so H1 isn't clipped
+      const header=document.querySelector('.header');
+      const root=document.documentElement;
+      if(header&&root){
+        const isFixed=()=>getComputedStyle(header).position==='fixed';
+        const apply=()=>{
+          const offset=isFixed()?header.offsetHeight:0;
+          root.style.setProperty('--header-offset',offset+'px');
+        };
+        apply();
+        if(window.ResizeObserver){ new ResizeObserver(apply).observe(header); }
+        addEventListener('resize',apply);
+      }
+    })();
+  </script>
 </body>
 </html>
